# NeuroVJNI

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  build_android_libs.sh
.github/workflows/: build-jni.yml
smollm/src/main/cpp/: CMakeLists.txt
